test/org/midica/testfiles/failing/zero-in-compact-opt.midica
INCLUDE inc/instruments.midica

0: (length=-)
